Fixed button alignment
now aligns more "elegantly"

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@
 	position: absolute;
 	width: 3.4em;
 	height: 3.4em;
+	top: 0em;
 	bottom: 0em;
 	margin: auto;
 	
@@ -56,9 +57,6 @@
 }
 .icon-button.right {
 	right: 1.2em;
-}
-.icon-button.top {
-	top: 0.25em;
 }
 .icon-button:hover {
 	transition: background-color 0.3s ease;
@@ -151,16 +149,13 @@
 	font-size: 1.5em;
 	font-weight: normal;
 	text-align: center;
-	vertical-align: bottom;
+	vertical-align: middle;
 	color: #FFCC00;
 }
 .quiz-info-bar__progress {
 	font-weight: bold;
 }
 
-.icon-button.bottom {
-	bottom: 0.45em;
-}
 .icon-button.next:active {
 	background-color: green;
 }
